[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Bullet01.gd" type="Script" id=1]
[ext_resource path="res://art/bullet_01.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 0.5, 3 )

[node name="Bullet01" type="Area2D"]

position = Vector2( 100, 100 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
SPEED = 200

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="PosRight" type="Position2D" parent="Collision" index="0"]

position = Vector2( 0.5, -3.5 )
_sections_unfolded = [ "Transform" ]

[node name="PosLeft" type="Position2D" parent="Collision" index="1"]

position = Vector2( -0.5, -3.5 )
_sections_unfolded = [ "Transform" ]

[node name="ShootTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_bullet_01_body_entered"]

[connection signal="timeout" from="ShootTimer" to="." method="_on_bullet_01_timer_timeout"]


